# ffmpeg_-player

./: .gitignore  CMakeLists.txt  README.md
ffplay/: CMakeLists.txt
ffplay/inc/: avmanager.h  codehandler.h  deviceinfo.h  mainwindow.h  videocontext.h
ffplay/src/: avmanager.cpp  deviceinfo.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  videocontext.cpp
